--- a/INFO450FavoriteThing/INFO450FavoriteThing.vcxproj
+++ b/INFO450FavoriteThing/INFO450FavoriteThing.vcxproj
@@ -146,10 +146,12 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="FavoriteThing.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="FavoriteThing.cpp" />
     <ClCompile Include="INFO450FavoriteThing.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
