--- a/INFO450FavoriteThing/INFO450FavoriteThing.vcxproj.filters
+++ b/INFO450FavoriteThing/INFO450FavoriteThing.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClInclude Include="targetver.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="FavoriteThing.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="INFO450FavoriteThing.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="FavoriteThing.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
